[gd_scene load_steps=13 format=3 uid="uid://cn4bf5orw4u3"]

[ext_resource type="Script" uid="uid://ck70o60e7cvpw" path="res://Scripts/UI/ui_manager.gd" id="1_x5yhv"]
[ext_resource type="Script" uid="uid://bce6bd5bd3xmj" path="res://Scripts/UI/game_ui.gd" id="2_huwks"]
[ext_resource type="Script" uid="uid://du7qimrr3ndp2" path="res://Scripts/UI/attack_select_ui.gd" id="3_1bij0"]
[ext_resource type="PackedScene" uid="uid://02yu3ceg1413" path="res://Scenes/UI/attack_button.tscn" id="4_88ycu"]
[ext_resource type="Texture2D" uid="uid://bfftuj6dfqlve" path="res://Images/ability_Shotgun.png" id="5_04kky"]
[ext_resource type="Script" uid="uid://bux5x8425u7s0" path="res://Scripts/UI/upgrade_select_ui.gd" id="6_bwqs5"]
[ext_resource type="PackedScene" uid="uid://do0fsi71ikngu" path="res://Scenes/UI/upgrade_button.tscn" id="7_hqs40"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huwks"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bij0"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88ycu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04kky"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1bij0"]
font_size = 48

[node name="UiManager" type="Node"]
script = ExtResource("1_x5yhv")

[node name="GameUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_huwks")

[node name="TopUI" type="Node2D" parent="GameUI"]
position = Vector2(0, 32)

[node name="LevelText" type="Label" parent="GameUI/TopUI"]
offset_left = 25.0
offset_top = 25.0
offset_right = 83.0
offset_bottom = 48.0
text = "Level: 1"
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="GameUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.01
anchor_right = 0.98
anchor_bottom = 0.033
offset_bottom = -9.118
theme_override_styles/background = SubResource("StyleBoxFlat_huwks")
theme_override_styles/fill = SubResource("StyleBoxFlat_1bij0")
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="GameUI"]
modulate = Color(0, 1, 0, 1)
self_modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 0.05
anchor_bottom = 0.2
offset_left = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_88ycu")
theme_override_styles/fill = SubResource("StyleBoxFlat_04kky")
fill_mode = 3
show_percentage = false

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -66.5
offset_right = 100.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="MainMenu/Buttons"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="MainMenu/Buttons"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu/Buttons"]
layout_mode = 2
text = "Quit"

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Buttons" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -66.5
offset_right = 100.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Retry" type="Button" parent="GameOver/Buttons"]
layout_mode = 2
text = "Retry"

[node name="ToMenu" type="Button" parent="GameOver/Buttons"]
layout_mode = 2
text = "Return To Menu"

[node name="ScoreText" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_top = 150.0
offset_right = 48.5
offset_bottom = 173.00005
grow_horizontal = 2
text = "Score: 69420"
label_settings = SubResource("LabelSettings_1bij0")

[node name="AttackSelectUI" type="Control" parent="." node_paths=PackedStringArray("slots")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_1bij0")
slots = [NodePath("VBoxContainer/Slot1Data/Slot1"), NodePath("VBoxContainer/Slot2Data/Slot2"), NodePath("VBoxContainer/Slot3Data/Slot3")]
attackButtonTscn = ExtResource("4_88ycu")

[node name="StartButton" type="Button" parent="AttackSelectUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -89.630005
offset_right = 32.0
offset_bottom = -58.629997
grow_horizontal = 2
grow_vertical = 0
text = "Begin
"

[node name="Attacks" type="BoxContainer" parent="AttackSelectUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -81.5
offset_right = 208.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SelectionBlocker" type="ColorRect" parent="AttackSelectUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.29411766)

[node name="VBoxContainer" type="VBoxContainer" parent="AttackSelectUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -148.0
offset_right = 147.99994
offset_bottom = -20.0
grow_vertical = 0

[node name="Slot1Data" type="HBoxContainer" parent="AttackSelectUI/VBoxContainer"]
layout_mode = 2

[node name="Slot1" type="Button" parent="AttackSelectUI/VBoxContainer/Slot1Data"]
layout_mode = 2
icon = ExtResource("5_04kky")

[node name="Attack1Name" type="Label" parent="AttackSelectUI/VBoxContainer/Slot1Data"]
layout_mode = 2
text = "Attack 1"

[node name="Slot2Data" type="HBoxContainer" parent="AttackSelectUI/VBoxContainer"]
layout_mode = 2

[node name="Slot2" type="Button" parent="AttackSelectUI/VBoxContainer/Slot2Data"]
layout_mode = 2
icon = ExtResource("5_04kky")

[node name="Attack2Name" type="Label" parent="AttackSelectUI/VBoxContainer/Slot2Data"]
layout_mode = 2
text = "Attack 2"

[node name="Slot3Data" type="HBoxContainer" parent="AttackSelectUI/VBoxContainer"]
layout_mode = 2

[node name="Slot3" type="Button" parent="AttackSelectUI/VBoxContainer/Slot3Data"]
layout_mode = 2
icon = ExtResource("5_04kky")

[node name="Attack3Name" type="Label" parent="AttackSelectUI/VBoxContainer/Slot3Data"]
layout_mode = 2
text = "Attack 3"

[node name="UpgradeSelectUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_bwqs5")
upgradeButton = ExtResource("7_hqs40")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeSelectUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpgradeButton" parent="UpgradeSelectUI/VBoxContainer" instance=ExtResource("7_hqs40")]
layout_mode = 2

[node name="UpgradeButton2" parent="UpgradeSelectUI/VBoxContainer" instance=ExtResource("7_hqs40")]
layout_mode = 2

[connection signal="button_up" from="MainMenu/Buttons/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="MainMenu/Buttons/Quit" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="GameOver/Buttons/Retry" to="." method="_on_retry_button_up"]
[connection signal="button_up" from="GameOver/Buttons/ToMenu" to="." method="_on_to_menu_button_up"]
[connection signal="button_up" from="AttackSelectUI/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="AttackSelectUI/VBoxContainer/Slot1Data/Slot1" to="AttackSelectUI" method="_on_slot_1_button_up"]
[connection signal="button_up" from="AttackSelectUI/VBoxContainer/Slot2Data/Slot2" to="AttackSelectUI" method="_on_slot_2_button_up"]
[connection signal="button_up" from="AttackSelectUI/VBoxContainer/Slot3Data/Slot3" to="AttackSelectUI" method="_on_slot_3_button_up"]
